Fix aside alignment in firefox.

--- a/site/styles/styles.css.sass
+++ b/site/styles/styles.css.sass
@@ -217,6 +217,8 @@ article
         width: $aside-width
         padding-left: $leading * 2
         box-sizing: border-box
+        -webkit-box-sizing: border-box
+        -moz-box-sizing: border-box
         float: right
         clear: right
         p
